--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
                 lat: 21.269354,
                 long: 72.962955
             },
+            {
+                name: "Piplod",
+                lat: 21.1593,
+                long: 72.7712
+            },
         ];
 
         cities.forEach(city => {
